# trayracer

./: .gitignore  CMakeLists.txt  README.md  bw.txt  color.h  filechanger.sh  main.cc  mat4.h  material.cc  material.h  object.h  pbr.h  project.tasks  random.cc  random.h  ray.h  raytracer.cc  raytracer.h  raytracer_results.txt  sphere.h  stb_image.h  stb_image_write.h  trayracer.kdev4  vec3.h  window.cc  window.h
.kdev4/: trayracer.kdev4
exts/: CMakeLists.txt
